Content added to banners.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <!-- Header Content - Start -->
                 <div class="header-content">
                     <!-- Logo - Start -->
-                    <a class="logo" href="">
+                    <a class="logo" href="index.html">
                         <img src="assets/images/logo.svg" alt="">
                     </a>
                     <!-- Logo - End -->
@@ -191,27 +191,155 @@
     </header>
     <!-- Header - End -->
 
+    <!-- Categories - Start -->
     <div class="categories">
+        <!-- Categories Container - Start -->
         <div class="container">
+            <!-- Category List - Start -->
             <ul class="category-list">
+                <!-- Category Item - Start -->
                 <li>
                     <a href="">KADIN</a>
-                    <div>
+                    <div class="black-out"></div>
+                    <div class="category-content">
+                        <div class="category-column">
+                            <div class="sub-category">
+                                <a href="products-page.html">Giyim</a>
+                                <ul>
+                                    <li><a href="">Elbise</a></li>
+                                    <li><a href="">Tişört</a></li>
+                                    <li><a href="">Gömlek</a></li>
+                                    <li><a href="">Kot Pantolon</a></li>
+                                    <li><a href="">Kot Ceket</a></li>
+                                    <li><a href="">Pantolon</a></li>
+                                    <li><a href="">Şort</a></li>
+                                    <li><a href="">Bluz</a></li>
+                                    <li><a href="">Ceket</a></li>
+                                    <li><a href="">Etek</a></li>
+                                    <li><a href="">Plaj Giyim</a></li>
+                                    <li><a href="">Tesettür</a></li>
+                                    <li><a href="">Büyük Beden</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="category-column">
+                            <div class="sub-category">
+                                <a href="">Ayakkabı</a>
+                                <ul>
+                                    <li><a href="">Topuklu Ayakkabı</a></li>
+                                    <li><a href="">Sneaker</a></li>
+                                    <li><a href="">Günlük Ayakkabı</a></li>
+                                    <li><a href="">Babet</a></li>
+                                    <li><a href="">Sandalet</a></li>
+                                    <li><a href="">Terlik</a></li>
+                                </ul>
+                            </div>
+                            <div class="sub-category">
+                                <a href="">Aksesuar & Çanta</a>
+                                <ul>
+                                    <li><a href="">Çanta</a></li>
+                                    <li><a href="">Saat</a></li>
+                                    <li><a href="">Takı</a></li>
+                                    <li><a href="">Şapka</a></li>
+                                    <li><a href="">Cüzdan</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="category-column">
+                            <div class="sub-category">
+                                <a href="">İç Giyim</a>
+                                <ul>
+                                    <li><a href="">Pijama Takımı</a></li>
+                                    <li><a href="">Gecelik</a></li>
+                                    <li><a href="">Sütyen</a></li>
+                                    <li><a href="">İç Çamaşırı Takımları</a></li>
+                                    <li><a href="">Fantazi Giyim</a></li>
+                                    <li><a href="">Çorap</a></li>
+                                </ul>
+                            </div>
+                            <div class="sub-category">
+                                <a href="">Lüks & Designer</a>
+                                <ul>
+                                    <li><a href="">Lüks Çanta</a></li>
+                                    <li><a href="">Lüks Giyim</a></li>
+                                    <li><a href="">Lüks Ayakkabı</a></li>
+                                    <li><a href="">Tasarım Giyim</a></li>
+                                    <li><a href="">Tasarım Ayakkabı</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="category-column">
+                            <div class="sub-category">
+                                <a href="">Kozmetik</a>
+                                <ul>
+                                    <li><a href="">Parfüm</a></li>
+                                    <li><a href="">Göz Makyajı</a></li>
+                                    <li><a href="">Boya & Resim</a></li>
+                                    <li><a href="">Cilt Bakım</a></li>
+                                    <li><a href="">Saç Bakımı</a></li>
+                                    <li><a href="">Makyaj</a></li>
+                                    <li><a href="">Ağız Bakım</a></li>
+                                    <li><a href="">Cinsel Sağlık</a></li>
+                                    <li><a href="">Vücut Bakım</a></li>
+                                    <li><a href="">Hijyenik Ped</a></li>
+                                    <li><a href="">Duş Jeli & Kremleri</a></li>
+                                    <li><a href="">Epilasyon Ürünleri</a></li>
+                                    <li><a href="">Ruj</a></li>
+                                    <li><a href="">Güneş Kremi</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="category-column">
+                            <div class="sub-category">
+                                <a href="">Spor & Outdoor</a>
+                                <ul>
+                                    <li><a href="">Sweatshirt</a></li>
+                                    <li><a href="">T-shirt</a></li>
+                                    <li><a href="">Spor Sütyeni</a></li>
+                                    <li><a href="">Tayt</a></li>
+                                    <li><a href="">Eşofman</a></li>
+                                    <li><a href="">Koşu Ayakkabısı</a></li>
+                                    <li><a href="">Spor Çantası</a></li>
+                                    <li><a href="">Spor Ekipmanları</a></li>
+                                    <li><a href="">Outdoor Ayakkabı</a></li>
+                                    <li><a href="">Kar Botu</a></li>
+                                    <li><a href="">Outdoor Ekipmanları</a></li>
+                                    <li><a href="">Sporcu Besinleri</a></li>
+                                    <li><a href="">Sporcu Aksesuarları</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="category-column">
+                            <div class="campaign-container">
+                                <a href="">
+                                    <img src="https://cdn.dsmcdn.com/mnresize/500/247/ty136/campaign/banners/original/573432/236a19b488_12_detay.jpg" alt="">
+                                </a>
+                                <a href="">
+                                    <img src="https://cdn.dsmcdn.com/mnresize/500/247/ty138/campaign/banners/original/573263/9908c64799_12_detay.jpg" alt="">
+                                </a>
+                            </div>
+                        </div>
                         
                     </div>
                 </li>
+                <!-- Category Item - End -->
+                <!-- Category Item - Start -->
                 <li>
                     <a href="">ERKEK</a>
                     <div>
 
                     </div>
                 </li>
+                <!-- Category Item - End -->
+                <!-- Category Item - Start -->
                 <li>
                     <a href="">ÇOCUK</a>
                     <div>
 
                     </div>
                 </li>
+                <!-- Category Item - End -->
+                <!-- Category Item - Start -->
                 <li>
                     <a href="">EV & YAŞAM</a>
                     <div class="black-out"></div>
@@ -350,40 +478,53 @@
                         </div>                    
                     </div>
                 </li>
+                <!-- Category Item - End -->
+                <!-- Category Item - Start -->
                 <li>
                     <a href="">SÜPERMARKET</a>
                     <div>
 
                     </div>
                 </li>
+                <!-- Category Item - End -->
+                <!-- Category Item - Start -->
                 <li>
                     <a href="">KOZMETİK</a>
                     <div>
 
                     </div>
                 </li>
+                <!-- Category Item - End -->
+                <!-- Category Item - Start -->
                 <li>
                     <a href="">AYAKKABI & ÇANTA</a>
                     <div>
 
                     </div>
                 </li>
+                <!-- Category Item - End -->
+                <!-- Category Item - Start -->
                 <li>
                     <a href="">SAAT & AKSESUAR</a>
                     <div>
 
                     </div>
                 </li>
+                <!-- Category Item - End -->
+                <!-- Category Item - Start -->
                 <li>
                     <a href="">ELEKTRONİK</a>
                     <div>
 
                     </div>
                 </li>
+                <!-- Category Item - End -->
             </ul>
-
+            <!-- Category List - End -->
         </div>
+        <!-- Categories Container - End -->
     </div>
+    <!-- Categories - End -->
 
     <!-- STORY SECTION BEGIN -->
 
@@ -548,22 +689,46 @@
             <div class="banners">
                 <div class="banner">
                     <a href="">
-                        <img class="banner-img" src="https://cdn.dsmcdn.com//mrktng/crm/rightBnr/jun/28/imgs/yaz.png" alt="">
+                        <img src="https://cdn.dsmcdn.com/ty135/product/media/images/20210624/14/103944201/80847148/1/1_org.jpg" alt="" class="banner-img">
+                        <span class="banner-info">
+                            <span>Spin Mop</span>
+                            <span>Proff Premium Sprey Mop 4 Adet Mop</span>
+                            <span>299 TL</span>
+                            <span>83,2 TL</span>
+                        </span>
                     </a>
                 </div>
                 <div class="banner">
                     <a href="">
-                        <img class="banner-img" src="https://cdn.dsmcdn.com//mrktng/crm/rightBnr/jun/28/imgs/yaz.png" alt="">
+                        <img src="https://cdn.dsmcdn.com/ty80/product/media/images/20210309/12/70136996/21115196/2/2_org.jpg" alt="" class="banner-img">
+                        <span class="banner-info">
+                            <span>Fairy</span>
+                            <span>Platinum 90 Yıkama Bulaşık Deterjanı Kapsülü Limon + Platinum Hijyen 500 ml + 2'li Sünger Hediye</span>
+                            <span>158,9 TL</span>
+                            <span>112,9 TL</span>
+                        </span>
                     </a>
                 </div>
                 <div class="banner">
                     <a href="">
-                        <img class="banner-img" src="https://cdn.dsmcdn.com//mrktng/crm/rightBnr/jun/28/imgs/yaz.png" alt="">
+                        <img src="https://cdn.dsmcdn.com/ty31/product/media/images/20210401/12/76941935/159513058/1/1_org.jpg" alt="" class="banner-img">
+                        <span class="banner-info">
+                            <span>GENIUS</span>
+                            <span>Store Unisex Baskılı Tişört Outdoor Normal Kalıp Tshirt</span>
+                            <span>109,1 TL</span>
+                            <span>54,55 TL</span>
+                        </span>
                     </a>
                 </div>
                 <div class="banner">
                     <a href="">
-                        <img class="banner-img" src="https://cdn.dsmcdn.com//mrktng/crm/rightBnr/jun/28/imgs/yaz.png" alt="">
+                        <img src="https://cdn.dsmcdn.com/ty117/product/media/images/20210524/18/91224890/163723264/1/1_org.jpg" alt="" class="banner-img">
+                        <span class="banner-info">
+                            <span>4 Baby</span>
+                            <span>Çift Yönlü Bebek Arabası</span>
+                            <span>589 TL</span>
+                            <span>499 TL</span>
+                        </span>
                     </a>
                 </div>
             </div>
