--- a/index.html
+++ b/index.html
@@ -598,11 +598,12 @@
             </div>
         </div>
     </div>
-
+<!-- STORY SECTION ENDS -->
 <!-- COMPONENT BANNER SECTION STARTS -->
 
     <div class="container">
-        <div class="component-banner-container">
+        <div class="component-banner-container"> 
+            <!-- Components Start -->
             <div class="components">
                 <div class="component">
                     <a href="" class="component-link">
@@ -685,7 +686,8 @@
                     </a>
                 </div>
             </div>
-            
+            <!-- Components End -->
+            <!-- Banners Start -->
             <div class="banners">
                 <div class="banner">
                     <a href="">
@@ -734,7 +736,7 @@
             </div>
         </div>
     </div>
-
-<!-- COMPONENT BANNER SECTION STARTS -->
+    <!-- Banner Ends -->
+<!-- COMPONENT BANNER SECTION ENDS -->
 </body>
 </html>
