favicon and product page updated

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         integrity="sha384-haqrlim99xjfMxRP6EWtafs0sB1WKcMdynwZleuUSwJR0mDeRYbhtY+KPMr+JL6f"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="icon" href="https://cdn.dsmcdn.com/web/production/favicon.ico" type="image/x-icon" />
 </head>
 
 <body>
