Split main css file into subfiles

--- a/products-page.html
+++ b/products-page.html
@@ -225,8 +225,11 @@
                 <li>
                     <a href="">KADIN</a>
                     <div class="black-out"></div>
+                    <!-- Category - Start -->
                     <div class="category-content">
+                        <!-- Category Column - Start -->
                         <div class="category-column">
+                            <!-- Sub Category Item - Start -->
                             <div class="sub-category">
                                 <a href="products-page.html">Giyim</a>
                                 <ul>
@@ -245,8 +248,12 @@
                                     <li><a href="">Büyük Beden</a></li>
                                 </ul>
                             </div>
+                            <!-- Sub Category Item - End -->
                         </div>
+                        <!-- Category Column - End -->
+                        <!-- Category Column - Start -->
                         <div class="category-column">
+                            <!-- Sub Category Item - Start -->
                             <div class="sub-category">
                                 <a href="">Ayakkabı</a>
                                 <ul>
@@ -258,6 +265,8 @@
                                     <li><a href="">Terlik</a></li>
                                 </ul>
                             </div>
+                            <!-- Sub Category Item - End -->
+                            <!-- Sub Category Item - Start -->
                             <div class="sub-category">
                                 <a href="">Aksesuar & Çanta</a>
                                 <ul>
@@ -268,8 +277,12 @@
                                     <li><a href="">Cüzdan</a></li>
                                 </ul>
                             </div>
+                            <!-- Sub Category Item - End -->
                         </div>
+                        <!-- Category Column - End -->
+                        <!-- Category Column - Start -->
                         <div class="category-column">
+                            <!-- Sub Category Item - Start -->
                             <div class="sub-category">
                                 <a href="">İç Giyim</a>
                                 <ul>
@@ -281,6 +294,8 @@
                                     <li><a href="">Çorap</a></li>
                                 </ul>
                             </div>
+                            <!-- Sub Category Item - End -->
+                            <!-- Sub Category Item - Start -->
                             <div class="sub-category">
                                 <a href="">Lüks & Designer</a>
                                 <ul>
@@ -291,8 +306,12 @@
                                     <li><a href="">Tasarım Ayakkabı</a></li>
                                 </ul>
                             </div>
+                            <!-- Sub Category Item - End -->
                         </div>
+                        <!-- Category Column - End -->
+                        <!-- Category Column - Start -->
                         <div class="category-column">
+                            <!-- Sub Category Item - Start -->
                             <div class="sub-category">
                                 <a href="">Kozmetik</a>
                                 <ul>
@@ -312,8 +331,12 @@
                                     <li><a href="">Güneş Kremi</a></li>
                                 </ul>
                             </div>
+                            <!-- Sub Category Item - End -->
                         </div>
+                        <!-- Category Column - End -->
+                        <!-- Category Column - Start -->
                         <div class="category-column">
+                            <!-- Sub Category Item - Start -->
                             <div class="sub-category">
                                 <a href="">Spor & Outdoor</a>
                                 <ul>
@@ -332,8 +355,12 @@
                                     <li><a href="">Sporcu Aksesuarları</a></li>
                                 </ul>
                             </div>
+                            <!-- Sub Category Item - End -->
                         </div>
+                        <!-- Category Column - End -->
+                        <!-- Category Column - Start -->
                         <div class="category-column">
+                            <!-- Campaign Item - Start -->
                             <div class="campaign-container">
                                 <a href="">
                                     <img src="https://cdn.dsmcdn.com/mnresize/500/247/ty136/campaign/banners/original/573432/236a19b488_12_detay.jpg"
@@ -344,33 +371,34 @@
                                         alt="Ev ürünlerinde kaçınılmaz fırsat">
                                 </a>
                             </div>
+                            <!-- Campaign Item - End -->
                         </div>
-
+                        <!-- Category Column - End -->
                     </div>
+                    <!-- Category - End -->
                 </li>
                 <!-- Category Item - End -->
                 <!-- Category Item - Start -->
                 <li>
                     <a href="">ERKEK</a>
-                    <div>
-
-                    </div>
+                    <div></div>
                 </li>
                 <!-- Category Item - End -->
                 <!-- Category Item - Start -->
                 <li>
                     <a href="">ÇOCUK</a>
-                    <div>
-
-                    </div>
+                    <div></div>
                 </li>
                 <!-- Category Item - End -->
                 <!-- Category Item - Start -->
                 <li>
                     <a href="">EV & YAŞAM</a>
                     <div class="black-out"></div>
+                    <!-- Category - Start -->
                     <div class="category-content">
+                        <!-- Category Column - Start -->
                         <div class="category-column">
+                            <!-- Sub Category - Start -->
                             <div class="sub-category">
                                 <a href="">Sofra & Mutfak</a>
                                 <ul>
@@ -383,6 +411,8 @@
                                     <li><a href="">Tencere Seti</a></li>
                                 </ul>
                             </div>
+                            <!-- Sub Category - End -->
+                            <!-- Sub Category - Start -->
                             <div class="sub-category">
                                 <a href="">Banyo</a>
                                 <ul>
@@ -392,8 +422,12 @@
                                     <li><a href="">Banyo Paspası</a></li>
                                 </ul>
                             </div>
+                            <!-- Sub Category - End -->
                         </div>
+                        <!-- Category Column - End -->
+                        <!-- Category Column - Start -->
                         <div class="category-column">
+                            <!-- Sub Category - Start -->
                             <div class="sub-category">
                                 <a href="">Ev Tekstili</a>
                                 <ul>
@@ -405,6 +439,8 @@
                                     <li><a href="">Kırlent ve Kılıfı</a></li>
                                 </ul>
                             </div>
+                            <!-- Sub Category - End -->
+                            <!-- Sub Category - Start -->
                             <div class="sub-category">
                                 <a href="">Ev Dekorasyonu</a>
                                 <ul>
@@ -415,8 +451,12 @@
                                     <li><a href="">Sanat</a></li>
                                 </ul>
                             </div>
+                            <!-- Sub Category - End-->
                         </div>
+                        <!-- Category Column - End -->
+                        <!-- Category Column - Start -->
                         <div class="category-column">
+                            <!-- Sub Category - Start -->
                             <div class="sub-category">
                                 <a href="">Aydınlatma</a>
                                 <ul>
@@ -425,6 +465,8 @@
                                     <li><a href="">Abajur</a></li>
                                 </ul>
                             </div>
+                            <!-- Sub Category - End -->
+                            <!-- Sub Category - Start -->
                             <div class="sub-category">
                                 <a href="">Mobilya</a>
                                 <ul>
@@ -433,6 +475,8 @@
                                     <li><a href="">Çalışma Odası</a></li>
                                 </ul>
                             </div>
+                            <!-- Sub Category - End -->
+                            <!-- Sub Category - Start -->
                             <div class="sub-category">
                                 <a href="">Ev Gereçleri</a>
                                 <ul>
@@ -442,8 +486,12 @@
                                     <li><a href="">Sepet & Hurç</a></li>
                                 </ul>
                             </div>
+                            <!-- Sub Category - End -->
                         </div>
+                        <!-- Category Column - End -->
+                        <!-- Category Column - Start -->
                         <div class="category-column">
+                            <!-- Sub Category - Start -->
                             <div class="sub-category">
                                 <a href="">Hobi</a>
                                 <ul>
@@ -453,6 +501,8 @@
                                     <li><a href="">Kutu Oyunları</a></li>
                                 </ul>
                             </div>
+                            <!-- Sub Category - End -->
+                            <!-- Sub Category - Start -->
                             <div class="sub-category">
                                 <a href="">Kırtasiye & Ofis</a>
                                 <ul>
@@ -460,6 +510,8 @@
                                     <li><a href="">Kalem</a></li>
                                 </ul>
                             </div>
+                            <!-- Sub Category - End -->
+                            <!-- Sub Category - Start -->
                             <div class="sub-category">
                                 <a href="">Spor & Outdoor</a>
                                 <ul>
@@ -469,8 +521,12 @@
                                     <li><a href="">Eliptik Bisiklet</a></li>
                                 </ul>
                             </div>
+                            <!-- Sub Category - End -->
                         </div>
+                        <!-- Category Column - End -->
+                        <!-- Category Column - Start -->
                         <div class="category-column">
+                            <!-- Sub Category - Start -->
                             <div class="sub-category">
                                 <a href="">Otomobil & Motorsiklet</a>
                                 <ul>
@@ -480,6 +536,8 @@
                                     <li><a href="">Kask</a></li>
                                 </ul>
                             </div>
+                            <!-- Sub Category - End -->
+                            <!-- Sub Category - Start -->
                             <div class="sub-category">
                                 <a href="">Yapı Market</a>
                                 <ul>
@@ -491,8 +549,12 @@
                                     <li><a href="">Ampul</a></li>
                                 </ul>
                             </div>
+                            <!-- Sub Category - End -->
                         </div>
+                        <!-- Category Column - End -->
+                        <!-- Category Column - Start -->
                         <div class="category-column">
+                            <!-- Campaign - Start -->
                             <div class="campaign-container">
                                 <a href="">
                                     <img src="https://cdn.dsmcdn.com/mnresize/500/247/ty136/campaign/banners/original/573432/236a19b488_12_detay.jpg"
@@ -503,48 +565,41 @@
                                         alt="Ev ürünlerinde kaçınılmaz fırsat">
                                 </a>
                             </div>
+                             <!-- Campaign - End -->
                         </div>
+                        <!-- Category Column - End -->
                     </div>
+                    <!-- Category - End -->
                 </li>
                 <!-- Category Item - End -->
                 <!-- Category Item - Start -->
                 <li>
                     <a href="">SÜPERMARKET</a>
-                    <div>
-
-                    </div>
+                    <div></div>
                 </li>
                 <!-- Category Item - End -->
                 <!-- Category Item - Start -->
                 <li>
                     <a href="">KOZMETİK</a>
-                    <div>
-
-                    </div>
+                    <div></div>
                 </li>
                 <!-- Category Item - End -->
                 <!-- Category Item - Start -->
                 <li>
                     <a href="">AYAKKABI & ÇANTA</a>
-                    <div>
-
-                    </div>
+                    <div></div>
                 </li>
                 <!-- Category Item - End -->
                 <!-- Category Item - Start -->
                 <li>
                     <a href="">SAAT & AKSESUAR</a>
-                    <div>
-
-                    </div>
+                    <div></div>
                 </li>
                 <!-- Category Item - End -->
                 <!-- Category Item - Start -->
                 <li>
                     <a href="">ELEKTRONİK</a>
-                    <div>
-
-                    </div>
+                    <div></div>
                 </li>
                 <!-- Category Item - End -->
             </ul>
